# django-school

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Procfile  README.md  data.json  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
school/: data.json  data.json.bak  db.sqlite3
school/academics/: apps.py  models.py  urls.py  views.py
school/academics/api/: serializers.py  urls.py  views.py
school/academics/migrations/: 0001_initial.py  0002_alter_student_options.py  0003_alter_student_enrollment_date.py
school/accounts/api/: serializers.py  urls.py  views.py
school/config/: asgi.py  settings.py  urls.py  wsgi.py
school/config/finance/: tasks.py
school/core/: forms.py  models.py  serializers.py  urls.py  views.py
school/core/api/: serializers.py  urls.py  views.py
school/core/migrations/: 0001_initial.py
school/core/templates/: base.html  keepalive.html
school/core/templates/core/: add_course.html  add_student.html  base.html  dashboard.html  enrollment_student.html  enrollment_success.html  generic_form.html  generic_list.html  index.html  list_courses.html  list_students.html  reports.html
school/core/templates/registration/: login.html
school/core/templatetags/: core_tags.py
school/school/: settings.py  urls.py
school/users/: permissions.py
